# syssoft2

./: .env  .gitignore  CMakeLists.txt  README.md  arch.pdsl  cfg.c  cfg.h  error.h  listing.c  listing.h  main.c  main.h  node.h  parser.h
RemoteTasks/: ssl-cfg.yaml
example_lab1/: devices-1.xml  example_print.asm  example_runtime.asm  example_threading2.asm  listing.asm  print.asm  print_by_clock.asm  scheduler.asm  variant14_scheduler.txt  vm_runtime.asm  vm_two_threads.asm
example_lab2/: devices.xml  run_scheduler_demo.sh  scheduler_program.txt  scheduler_runtime.asm
examples_yuko/: loop.asm
hlvm_lab1/: README.md  calc.il  clr_model.c  clr_model.h  clr_serializer.c  fib.il  main.c
hlvm_lab1_example/: SimpleVm.pdsl  jvm_emitter.c  jvm_emitter.h  jvm_runtime.j.tpl  model_serializer.c  model_serializer.h
hlvm_lab2/: README.md  closure_demo.il  closure_demo.txt  closure_dispatch_demo.il  closure_dispatch_demo.txt  closure_full_demo.il  closure_full_demo.txt  clr_model.c  clr_model.h  clr_serializer.c  clr_serializer.h  main.c  out.il  source_transformer.c  source_transformer.h
hlvm_lab4/: README.md  app.php  build_bridge.sh  build_vm.sh  php_vm_bridge.c  php_vm_bridge.h  vm_math.il  vm_math.txt
input/: calc.txt  calc_line.txt  fib.txt  test.txt
listings/: input.osm  output.osm
remote_tasks_example/: VmDevices.xsd
reports/lab1/: README.md
reports/lab2/: README.md
reports/lab3/: README.md
scripts/: assemble.py  assemble_debug.py  build_txt_to_asm.py  debug_binary.py  debug_binary_with_input.py  execute_binary.py  execute_binary_interactive.py  execute_binary_with_input.py  execute_binary_with_io.py  list.py  remote_task.py  resolve_arch_model.py  run_vm_two_threads.py  show-task  show_task.py  sync_vm_two_threads_period.py  validate_arch.py  visualize_arch_model_arch.py
spo2_lab1/: README.md  example_input.asm  example_threading.asm  example_threading.txt  minimal_timer_aabb.asm  minimal_timer_aabb.generated.asm  minimal_timer_aabb.txt  minimal_timer_abab.asm  minimal_timer_abab.generated.asm  minimal_timer_abab.txt  print.asm  readByte.asm  simple_threads_aabb.generated.asm  simple_threads_aabb.txt  simple_threads_abab.run.asm  simple_threads_abab.txt  vm_two_threads.asm  vm_two_threads_live_cycles.txt  while_print.txt
